fix: - amount card spacing - second last and last section styling

--- a/src/css/amount/amountCard.module.css
+++ b/src/css/amount/amountCard.module.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 20px;
-  padding: 50px;
+  padding: 85px;
   background-color: var(--main-color);
 }
 
