--- a/src/css/amount/listIcon.module.css
+++ b/src/css/amount/listIcon.module.css
@@ -9,7 +9,7 @@
   margin-right: 20px;
   background-color: var(--main-color);
   flex-wrap: wrap;
-  padding: 20px;
+  padding: 40px;
   gap: 30px;
   border-radius: 10px;
   margin-bottom: 50px;
@@ -21,6 +21,7 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  max-width: 45%;
 }
 
 .content.contentReverse {
@@ -40,8 +41,10 @@
   font-family: "Inter", sans-serif;
   font-size: 16px;
   color: #08306b;
-  margin-bottom: 20px;
   text-align: center;
+  max-width: 50%;
+    margin: auto;
+    margin-bottom: 5rem;
 }
 
 .listTitle {
@@ -85,15 +88,13 @@
 
 .imageWrapper {
   flex: 1;
-  min-width: 300px;
   display: flex;
   justify-content: center;
+  max-width: 45%;
 }
 
 .image {
   width: 100%;
-  max-width: 500px;
-  height: 70%;
   object-fit: cover;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
@@ -118,15 +119,20 @@
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 16px 24px;
+  gap: 16px 0;
+  max-width: 60%;
+  margin: auto;
 }
 
 .sideListContent li {
   display: flex;
-  align-items: flex-start;
-  font-size: 15px;
-  color: white;
-  line-height: 1.5;
+    align-items: center;
+    font-size: 15px;
+    color: #fff;
+    line-height: 1.5;
+    padding-bottom: .5rem;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    padding-right: 1rem;
 }
 
 .sideListContent img {
@@ -138,7 +144,7 @@
 
 .footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: #f4f7fc;
   padding: 40px 30px;
@@ -148,8 +154,12 @@
   gap: 20px;
 }
 
+.footerText {
+  width: 30%;
+}
+
 .footerText h4 {
-  font-size: 18px;
+  font-size: 3rem;
   font-weight: 600;
   color: #002b5b;
 }
@@ -158,6 +168,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+    width: 50%;
+    height: 200px;
 }
 
 .logoBox {
@@ -166,7 +178,12 @@
   padding: 14px 28px;
   border-radius: 12px;
   font-weight: 600;
-  font-size: 16px;
+    font-size: 4rem;
+    width: 100%;
+    height: 100%;
+    flex: 1;
+    display: grid;
+    place-items: center;
 }
 
 /* Rhe
